# flake8-pep585

./: README.md  pyproject.toml  setup.cfg
examples/: 001.py  002.py
flake8_pep585/: flake_diagnostic.py  plugin.py  rules.py  visitor.py
