[tool.poetry]
name = "flake8-pep585"
version = "0.1.4.1"
description = "flake8 plugin to enforce new-style type hints (PEP 585)"
authors = ["decorator-factory <decorator-factory@yandex.ru>"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/decorator-factory/flake8-pep585"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "0.16.0"

[tool.poetry.plugins."flake8.extension"]
PEA = "flake8_pep585.plugin:Pep585Plugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
